--- a/blog_project/templates/base.html
+++ b/blog_project/templates/base.html
@@ -3,8 +3,9 @@
 
 <head>
   <title>Django blog</title>
+  {% load static %}
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
-  <link rel="stylesheet" href="static/css/base.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
 </head>
 
 <body>
