--- a/blog_project/templates/post_detail.html
+++ b/blog_project/templates/post_detail.html
@@ -3,8 +3,10 @@
 
 {% block content %}
   <div class="post-entry">
-    <h2>{{ anything_you_want.title }}</h2>
-    <p>{{ anything_you_want.body }}</p>
+    <h2>{{ post_detail.title }}</h2>
+    <p>{{ post_detail.body }}</p>
   </div>
 
+  <p><a href="{% url 'post_edit' post_detail.pk %}">Edit Blog Post</a></p>
+  <p><a href="{% url 'post_delete' post_detail.pk %}">Delete Blog Post</a></p>
 {% endblock content %}
